--- a/index.html
+++ b/index.html
@@ -58,51 +58,50 @@
 				<div class="readable content center">
 					<h2 id="what-is-it">What is it?</h2>
 
-<p>GhettoBox is a set of CSS micro-components for doing page layout (and that’s it).</p>
+<p>GhettoBox is a set of CSS micro-components for doing page layout. That’s it.</p>
 
-<p>At a basic level, it is akin to a CSS grid system. However, once you get to know it, you will see it provides a lot more than that.</p>
+<p>At the most basic level, it is akin to a CSS grid system. However, once you get to know it, you will see it can provide much more than that.</p>
+
+<p>It looks like this:</p>
 
 <iframe style="height: 520px;" class="w-fill" src="demo-animation/" frameborder="0"></iframe>
 
-<p>GhettoBox is made to fit into your template layer. It’s designed for rapidly creating page layouts and encourages creating <a href="#">Mockups in Markup</a>.</p>
+<p>GhettoBox is designed to fit into your template layer. It’s made for rapid page layout and prototyping and works nicely with <a href="http://24ways.org/2009/make-your-mockup-in-markup/">creating Mockups in Markup</a>.</p>
 
 <div class="cs-2 pad-sm rnd-xs">
 
-  <p><em>Note:</em> GhettoBox is not meant to be a replacement for your favorite framework. It should complement your toolset while staying out of the way as much as possible.</p>
+  <p><em>Note:</em> GhettoBox is not meant to be a replacement for your favorite framework. It should complement your existing tool-set while staying out of the way as much as possible.</p>
 
 </div>
 
-<h2 id="you-crazy">You Crazy</h2>
+<p>GhettoBox is <em>only for layout</em>. That means if you use it, you will still need to create your own HTML/CSS components and styles. GhettoBox will be there to help you size, position, and resize your components.</p>
 
-<p>GhettoBox is very different from other CSS libraries. It isn’t going to meld with everyone’s idea of what qualifies as “proper CSS”.</p>
+<h3 id="make-layout-easy">Make Layout Easy</h3>
 
-<p>I fully expect some people to hate on it. Haters gonna hate.</p>
+<p>More than anything, GhettoBox strives to <strong>make layout easy</strong>.</p>
 
-<p>Give it a chance though - <a href="https://signalvnoise.com/posts/3124-give-it-five-minutes">just five minutes</a>. Even if you don’t end up using it for anything, GhettoBox involves thinking about page layout in a different way. At the very least, it will provide you with a fresh perspective on how CSS can be applied to HTML.</p>
+<p>Let’s face it, working with CSS can be a <a href="images/PPML.gif">finnicky, fidgety, frustrating, mess</a>. For any given task, there are a hundred different ways to go about it depending on context, preference, and browser support. They all break in there own special way.</p>
 
-<h2 id="motivation">Motivation</h2>
+<p>We believe there is a better way. The theory being that by using <strong>less</strong> features of CSS, you can actually get <strong>more</strong> done with it.</p>
 
-<p>One of the hardest parts of web development is getting elements to appear where and how you want them. CSS can be frustrating tool to work with - especially for beginners. It often acts in ways that are unintuitive or difficult to work around.</p>
-
-<p>While flexbox and web components may be the future of HTML/CSS, for now, we designers and developers are stuck working under some serious limitations.</p>
-
-<p>…</p>
-
-<p>More than anything, GhettoBox aims to <strong>make layout easy</strong>. It takes the majority of layout and narrows it down to some very basic core components:</p>
+<p>GhettoBox takes the multitude of CSS layout options and narrows them down to a handful of primitives:</p>
 
 <ul>
-  <li>Padding</li>
-  <li>Left-to-Right Placement</li>
-  <li>Widths</li>
-  <li>Horizontal/Vertical Alignment</li>
+  <li><a href="documentation/#padding">Padding</a></li>
+  <li><a href="documentation/#tiling">Left-to-Right Placement</a></li>
+  <li><a href="documentation/#widths">Widths</a></li>
+  <li><a href="documentation/#alignment">Horizontal/Vertical Alignment</a></li>
 </ul>
 
-<p>In addition, it provides utilities for:</p>
+<p>You may think that this would be limiting - that it would not be enough to create elegant or complex page structures, but the truth is, if used properly, the above will get you over 90% of the way there (if not all of the way).</p>
+
+<p>As an added bonus, GhettoBox throws in functionality for:</p>
 
 <ul>
   <li>Font Sizing</li>
-  <li>Equal Height Columns</li>
-  <li>Responsiveness</li>
+  <li><a href="documentation/#equal-height-columns">Equal Height Columns</a></li>
+  <li><a href="documentation/#responsive">Responsiveness</a></li>
+  <li><a href="documentation/#source-ordering">Source Ordering</a></li>
 </ul>
 
 <h3 id="goals">Goals</h3>
@@ -113,12 +112,13 @@
   <li><strong>Make HTML/CSS layout easy!</strong>
     <ul>
       <li>Don’t fight the document flow</li>
+      <li>Keep it simple, stupid!</li>
     </ul>
   </li>
   <li>Beginner friendly
     <ul>
       <li>Do not require the use of a preprocessor</li>
-      <li>Stick to simple, easy-to-follow components</li>
+      <li>Stick to primitive, easy-to-follow components</li>
     </ul>
   </li>
   <li>Only handle what’s directly related to layout
@@ -140,6 +140,22 @@
     </ul>
   </li>
 </ul>
+
+<h2 id="you-crazy">You Crazy</h2>
+
+<p>GhettoBox is different from other CSS libraries. It may not meld with your idea of what qualifies as “proper CSS”.</p>
+
+<p>We fully expect some people to hate on it. Haters gonna hate.</p>
+
+<p>Give it a chance though - <a href="https://signalvnoise.com/posts/3124-give-it-five-minutes">just five minutes</a>. Even if you don’t end up using it for anything, GhettoBox involves thinking about page layout in a different way. At the very least, it will provide you with a fresh perspective on how CSS can be applied to HTML.</p>
+
+<!-- 
+## Motivation
+
+One of the hardest parts of web development is getting elements to appear where and how you want them. CSS can be frustrating tool to work with - especially for beginners. It often acts in ways that are unintuitive or difficult to work around.
+
+While flexbox and web components may be the future of HTML/CSS, for now, we designers and developers are stuck working within the limitations of browsers. GhettoBox is an easy-to-learn system that ...
+ -->
 
 <h2 id="whats-different">What’s different?</h2>
 
